# Task-Manager

./: .env.example  .gitignore  Dockerfile  JWT_AUTH_FLOW.md  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  requirements.txt
alembic/: env.py
alembic/versions/: ec62a80e4c36_fix_links_table.py
app/: db.py  errors.py  utility.py
app/models/: __init__.py  user.py
app/tests/: test_user.py
app/user/: users.py
core/: __init__.py  auth.py  utility.py
core/models/: base.py  task.py  user.py
event_consumer/: .dockerignore  .gitignore  cache.py  config.py  event_handler.py  main.py  requirements.txt
event_consumer/tests/: test_event_handler.py
task_service/: Cargo.toml  Dockerfile
task_service/migrations/: 20260414203925_task_table.sql
task_service/src/: db.rs  error.rs  main.rs  models.rs  schemas.rs  state.rs  stream.rs  utility.rs
task_service/src/routes/: route.rs
tasks/: routes.py  schemas.py
telegram_bot/: .dockerignore  api_client.py  config.py  handlers.py  keyboards.py  main.py  requirements.txt  schemas.py
telegram_bot/tests/: test_api_client.py  test_handlers.py
user_service/: Dockerfile  alembic.ini  main.py  requirements.txt  test_imports.py
user_service/alembic/versions/: 3ea51ef052c1_init_tables.py
user_service/app/: auth.py
user_service/app/tests/: conftest.py
user_service/app/user/: model.py
user_service/core/: auth.py  config.py  db.py
user_service/core/models/: __init__.py  user.py
user_service/tests/: test_users.py
user_service/users/: routes.py  schemas.py
users/: routes.py
