[package]
name = "task_service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header", "query", "multipart","cookie"] }
tokio-stream = "0.1"

tokio = { version = "1.42", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "timeout", "trace", "fs", "limit"] }

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

jsonwebtoken = "9.3"
argon2 = "0.5"

thiserror = "2.0"
anyhow = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures = "0.3"

tower-service = "0.3"
http-body-util = "0.1"
rand = "0.8.0"
nanoid = "0.4.0"

redis = { version = "0.25", features = ["tokio-comp"] }